--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^4.4.0
   photo_manager: ^3.8.3
   permission_handler: ^12.0.1
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
