--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
     <uses-permission android:name="com.android.vending.BILLING"/>
     <application
-        android:label="loadintel"
+        android:label="Load Intel"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
