--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,7 +109,7 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icon.png"
+  image_path: "assets/icon2.png"
 
 flutter_native_splash:
   color: "#F4E7D3"
