--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   in_app_purchase: ^3.2.0
   path_provider: ^2.1.4
   path: ^1.9.0
+  package_info_plus: ^9.0.0
   provider: ^6.1.2
   pdf: ^3.11.0
   sqflite: ^2.3.3
