--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   photo_manager: ^3.8.3
   permission_handler: ^12.0.1
   share_plus: ^9.0.0
+  excel: ^4.0.2
 
 dev_dependencies:
   flutter_test:
