--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Split debug info (symbols for de-obfuscation)
+/build/symbols/
+
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
