--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   file_picker: ^8.0.6
+  geolocator: ^12.0.0
   google_fonts: ^4.0.4
+  http: ^1.2.0
   image_picker: ^1.1.2
   in_app_purchase: ^3.2.0
   path_provider: ^2.1.4
