--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: ^12.0.1
   share_plus: ^9.0.0
   excel: ^4.0.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
