--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   google_fonts: ^8.0.1
   http: ^1.2.0
   image_picker: ^1.1.2
-  in_app_purchase: ^3.2.0
+  in_app_purchase: ^3.2.3
+  in_app_purchase_android: ^0.4.0
   path_provider: ^2.1.4
   path: ^1.9.0
   package_info_plus: ^9.0.0
